# trickshot

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  lefthook.yml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/trickshot-server/: Cargo.toml
crates/trickshot-server/deploy/: Dockerfile
crates/trickshot-server/src/: chrome.rs  config.rs  error.rs  handlers.rs  keys.rs  main.rs  tunnel.rs
crates/ts/: Cargo.toml
crates/ts/src/: admin.rs  config.rs  main.rs  tunnel.rs
deploy/: Dockerfile
src/: chrome.rs  config.rs  engine.rs  error.rs  handlers.rs  keys.rs  main.rs  renderer.rs  ssrf.rs  tunnel.rs
