[package]
name = "trickshot"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["DorskFR"]
description = "Fast screenshot-as-API: render a URL to an image and return it, backed by Servo."

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
struct_field_names = "allow"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-channel = "2"
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
url = "2"

[profile.release]
strip = true
lto = "thin"
