[package]
name = "trickshot"
version = "0.5.0"
edition = "2024"
license = "MIT"
authors = ["DorskFR"]
description = "Fast screenshot-as-API: render a URL to an image and return it, backed by always-warm headless Chrome over CDP."

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
struct_field_names = "allow"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
sha2 = "0.11.0"
rand = "0.10.1"
base64 = "0.22.1"
notify = "8.2.0"
serde_json = "1.0.150"

[profile.release]
strip = true
lto = "thin"
