[workspace]
resolver = "2"
members = [
    "crates/trickshot-server",
    "crates/ts",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT"
authors = ["DorskFR"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
struct_field_names = "allow"

[profile.release]
strip = true
lto = "thin"
