[package]
name = "trickshot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fast screenshot-as-API: render a URL to an image and return it, backed by always-warm headless Chrome over CDP."

[[bin]]
name = "trickshot"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chromiumoxide = { version = "0.9", default-features = false }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
url = "2"
sha2 = "0.11.0"
rand = "0.10.1"
base64 = "0.22.1"
notify = "8.2.0"
serde_json = "1.0.150"
