[package]
name = "ts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "trickshot CLI client: request a screenshot, or act as the reverse-tunnel agent for private/VPN URLs."

[[bin]]
name = "ts"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "fs", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots", "url"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
